@@ -6,5 +6,20 @@
 #include <openssl/ssl.h>
 #include <openssl/err.h>
 
+#include <openssl/pkcs12.h>
+
 static const char* FILE_NAME = "Net/SSLeay/PKCS12.c";
 
+int32_t SPVM__Net__SSLeay__PKCS12__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  PKCS12* pointer = env->get_pointer(env, stack, obj_self);
+  
+  if (!env->no_free(env, stack, obj_self)) {
+    PKCS12_free(pointer);
+  }
+  
+  return 0;
+}
